minecraft controls finished, still to put on seperate thread